<resources>
    <string name="app_name">KeyCard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="insert_password">Insert your password:</string>
    <string name="title_activity_search_password">SearchPasswordActivity</string>
    <string name="password_position_key">Position:</string>
    <string name="password_position_value">Value:</string>
    <string name="add_code">Add code:</string>
    <string name="save_password">Save</string>
    <string name="search_password">Search Pass:</string>
    <string name="search">Search</string>
    <string name="change_main_password">Change Main Password</string>


    <!--MainActivity-->
    <string name="error_on_save_main_password">An error occurs while save the main password, please try again.</string>
    <string name="error_on_check_main_password">Password invalid, please try again.</string>
    <string name="check">"Check"</string>

    <!--SearchPasswordActivity-->
    <string name="error_on_save_password">An error occurs while save the password, please try again.</string>
    <string name="password_saved">Saved!</string>
    <string name="error_on_search_password">An error occurs while search the password.</string>
    <string name="title_activity_list_passwords">ListPasswordsActivity</string>
</resources>
