<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.home.jss.keycard.SearchPasswordActivity"
    android:id="@+id/searchPasswordContainer">

    <TextView android:text="@string/password_position_key" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPossitionKey"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:text="@string/password_position_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textViewPossitionKey"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/add_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/editTextValuePassword"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView"
        android:maxLength="4"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="2"
        android:id="@+id/editTextKeyPassword"
        android:layout_alignBottom="@+id/editTextValuePassword"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toStartOf="@+id/buttonSavePassword"
        android:maxLength="2"
        android:gravity="center"
        android:layout_toLeftOf="@+id/buttonSavePassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_password"
        android:id="@+id/buttonSavePassword"
        android:layout_below="@+id/editTextValuePassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_password"
        android:id="@+id/textViewSearchPass"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextSearchPassword"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textViewSearchPass"
        android:maxLength="2"
        android:gravity="center"
        android:layout_alignRight="@+id/editTextKeyPassword"
        android:layout_alignEnd="@+id/editTextKeyPassword">
        <requestFocus />
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/buttonSearchPassword"
        android:layout_alignTop="@+id/editTextSearchPassword"
        android:layout_alignRight="@+id/editTextValuePassword"
        android:layout_alignEnd="@+id/editTextValuePassword"
        android:layout_alignLeft="@+id/buttonSavePassword"
        android:layout_alignStart="@+id/buttonSavePassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_main_password"
        android:id="@+id/buttonChangePassword"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
